Update with Additional Data binding for Plan Details

--- a/TripPlanner/TripPlanner.csproj
+++ b/TripPlanner/TripPlanner.csproj
@@ -99,6 +99,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Classes\DayEvents.cs" />
+    <Compile Include="Classes\Days.cs" />
     <Compile Include="Classes\Plans.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
